apps/monitoring/grafana/manifests/httproute.yaml
---
# yaml-language-server: $schema=https://kube-schemas.shold.io/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: gateway
  hostnames:
    - grafana.mgmt.sholdee.net
  rules:
    - backendRefs:
        - name: grafana-service
          namespace: monitoring
          port: 3000
      sessionPersistence:
        sessionName: route
        type: Cookie
